is-deploy-k8s/isapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isapi-deploy
spec:
  selector:
    matchLabels:
      app: isapi
  template:
    metadata:
      labels:
        app: isapi
    spec:
      containers:
      - name: is-c
        image: hungvu034/iserver:latest
        ports:
        - containerPort: 80
        - containerPort: 443
---

apiVersion: v1
kind: Service
metadata:
  name: isservice

spec:
  type: ClusterIP
  selector:
    app: isapi
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
