is-deploy-k8s/isdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  isdb-deploy
  labels:
    app: isdb
spec:
  selector:
    matchLabels:
      app: isdb
  replicas: 1
  template:
    metadata:
      labels:
        app:  isdb
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 1001
      containers:
      - name:  mssql-server
        image: mcr.microsoft.com/mssql/server:2019-latest
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 1000Mi
        #   limits:
        #     cpu: 100m
        #     memory: 1000Mi
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-db
          mountPath: /var/opt/mssql/
      volumes:
        - name: mssql-db
          persistentVolumeClaim: 
            claimName: isdb-data
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: identitydb
spec:
  selector:
    app: isdb
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - protocol: TCP
    port: 1433 
    targetPort: 1433
