is-deploy-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  -  http:
      paths: 
      - path: /iserver(/|$)(.*)
        pathType: Prefix  
        backend:
          service:
            name: isservice
            port: 
              number: 80
